--- a/pages/css/block/animals.css
+++ b/pages/css/block/animals.css
@@ -58,6 +58,7 @@
     padding: 0;
     list-style: none; }
   .animal__item {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,6 +75,22 @@
     text-transform: uppercase;
     color: #2D2D2D;
     cursor: pointer; }
+    .animal__item:hover > .animal__item-active {
+      animation: linear 10s infinite border-rotation; }
+    .animal__item:hover > .animal__item-link {
+      animation: linear 10s infinite border-rotation; }
+    .animal__item:hover > .animal__item-link > img {
+      animation: linear 10s infinite anti-border-rotation; }
+    .animal__item-active {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: -4px;
+      left: -11px;
+      clip-path: path("M 87.7735 19.2857 C 96.119 30.5442 98.4372 45.8899 94.1098 57.688 C 89.7823 69.4864 78.9639 77.8148 66.5224 84.2919 C 54.1584 90.7694 40.1713 95.4737 28.2709 91.3866 C 16.3704 87.3766 6.4791 74.73 2.2289 59.77 C -1.9439 44.8102 -0.4758 27.5368 8.4882 16.2011 C 17.5295 4.7885 33.9893 -0.7637 49.5216 0.0844 C 64.9769 0.9328 79.4276 8.1042 87.7735 19.2857 Z");
+      background: #2A8086;
+      z-index: 0;
+    }
     .animal__item-link {
       display: block;
       position: relative;
@@ -81,8 +98,6 @@
       height: 76px;
       margin-bottom: 9px;
       clip-path: path("M 73.0698 16.055 C 80.0173 25.4275 81.9472 38.2025 78.3447 48.0242 C 74.7421 57.8462 65.736 64.7794 55.3787 70.1715 C 45.0859 75.5639 33.4419 79.4801 23.535 76.0777 C 13.6281 72.7394 5.3937 62.2114 1.8555 49.7574 C -1.6183 37.3037 -0.3961 22.9239 7.0663 13.4871 C 14.593 3.9863 28.2955 -0.6358 41.2258 0.0703 C 54.0921 0.7765 66.122 6.7466 73.0698 16.055 Z"); }
-      .animal__item-link:hover {
-        animation: linear 10s infinite border-rotation; }
       .animal__item-link > img {
         position: absolute;
         width: 130%;
