--- a/pages/css/block/animals.css
+++ b/pages/css/block/animals.css
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: space-between;
   border: none;
-  width: 118px;
+  max-width: 118px;
   height: 42px;
   margin-right: 4px;
   padding: 0; }
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 42px;
+    max-width: 42px;
     height: 42px;
     border: 1.5px solid #19707d;
     border-radius: 100%;
@@ -54,7 +54,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 105px;
+    max-width: 105px;
     padding: 0;
     list-style: none; }
   .animal__item {
@@ -63,7 +63,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 81px;
+    max-width: 81px;
     height: 110px;
     margin-top: 50px;
     font-family: Roboto Mono;
@@ -83,24 +83,23 @@
       animation: linear 10s infinite anti-border-rotation; }
     .animal__item-active {
       position: absolute;
-      width: 100px;
+      max-width: 100px;
       height: 100px;
       top: -4px;
       left: -11px;
       clip-path: path("M 87.7735 19.2857 C 96.119 30.5442 98.4372 45.8899 94.1098 57.688 C 89.7823 69.4864 78.9639 77.8148 66.5224 84.2919 C 54.1584 90.7694 40.1713 95.4737 28.2709 91.3866 C 16.3704 87.3766 6.4791 74.73 2.2289 59.77 C -1.9439 44.8102 -0.4758 27.5368 8.4882 16.2011 C 17.5295 4.7885 33.9893 -0.7637 49.5216 0.0844 C 64.9769 0.9328 79.4276 8.1042 87.7735 19.2857 Z");
       background: #2A8086;
-      z-index: 0;
-    }
+      z-index: 0; }
     .animal__item-link {
       display: block;
       position: relative;
-      width: 80px;
+      max-width: 80px;
       height: 76px;
       margin-bottom: 9px;
       clip-path: path("M 73.0698 16.055 C 80.0173 25.4275 81.9472 38.2025 78.3447 48.0242 C 74.7421 57.8462 65.736 64.7794 55.3787 70.1715 C 45.0859 75.5639 33.4419 79.4801 23.535 76.0777 C 13.6281 72.7394 5.3937 62.2114 1.8555 49.7574 C -1.6183 37.3037 -0.3961 22.9239 7.0663 13.4871 C 14.593 3.9863 28.2955 -0.6358 41.2258 0.0703 C 54.0921 0.7765 66.122 6.7466 73.0698 16.055 Z"); }
       .animal__item-link > img {
         position: absolute;
-        width: 130%;
+        max-width: 130%;
         height: 110%;
         top: -3px;
         left: -16px; }
@@ -121,12 +120,12 @@
   .animal__slider-sub {
     margin-top: 53px; }
   .animal__cam {
-    width: 100%; }
+    max-width: 100%; }
     .animal__cam-slider {
       position: relative;
       display: flex;
       justify-content: space-between;
-      width: 1204px; }
+      max-width: 1204px; }
     .animal__cam-prev > img {
       transition: 0.3s;
       transform: scale(-1);
@@ -143,16 +142,16 @@
       .animal__cam-next > img:active {
         transform: scale(0.8); }
     .animal__cam-card {
-      width: 380px;
+      max-width: 380px;
       height: 240px; }
       .animal__cam-card > img {
-        width: 100%; }
+        max-width: 100%; }
     .animal__cam-btn {
       position: absolute;
       top: 27%;
       right: -7%; }
   .animal__youtube {
-    width: 1324px;
+    max-width: 1324px;
     height: 604px;
     border-radius: 19px; }
   .animal__descr {
@@ -161,11 +160,11 @@
     .animal__descr .subheader {
       height: 22px; }
   .animal__inf {
-    width: 50.8%; }
+    max-width: 50.8%; }
     .animal__inf .subheader {
       margin-bottom: 30px; }
     .animal__inf-item {
-      width: 80%;
+      max-width: 80%;
       margin-top: 34px; }
     .animal__inf-header {
       font-family: Roboto;
@@ -183,7 +182,7 @@
       line-height: 20px;
       color: #0D444D; }
   .animal__fact {
-    width: 48.5%;
+    max-width: 48.5%;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -203,7 +202,7 @@
         position: absolute;
         top: -1px;
         left: -23px;
-        width: 12px;
+        max-width: 12px;
         height: 15px;
         clip-path: path("M1.49247 0.50889C5.8121 2.84025 11.7231 9.85155 12.3095 15.2466C12.3692 15.7956 11.922 16.1371 11.4512 15.8483C8.55901 14.074 0.80434 6.69285 0.348157 1.22713C0.295422 0.595286 0.934516 0.207751 1.49247 0.50889Z");
         background: #0D444D; }
@@ -217,10 +216,10 @@
       position: absolute;
       bottom: -100px;
       left: -28%;
-      width: 1920px;
+      max-width: 1920px;
       z-index: -1; }
     .animal__donate-btn {
-      width: 356px;
+      max-width: 356px;
       height: 52px;
       margin-bottom: 54px;
       margin-right: 152px;
