--- a/pages/css/block/feed.css
+++ b/pages/css/block/feed.css
@@ -1,9 +1,11 @@
 .feed {
   position: relative;
+  max-width: 100%;
   width: 100%;
   height: 590px;
   margin-top: 78px;
-  padding-top: 20px; }
+  padding-top: 20px;
+  background: url("../../../assets/img/feed/feed-bg.png") top center no-repeat; }
   .feed__bg {
     position: absolute;
     top: 0;
@@ -12,7 +14,7 @@
   .feed .container .subheader {
     color: #C5E1E6; }
   .feed .container__btn {
-    width: 356px;
+    width: 26%;
     letter-spacing: -0.05em;
     color: #C5E1E6;
     background: #FFFFFF;
@@ -32,26 +34,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 145px;
+    max-width: 145px;
+    width: 100%;
     height: 145px;
     border-radius: 100%;
     background-color: #ffffff;
     box-shadow: 0px 2px 50px rgba(185, 213, 217, 0.6);
     z-index: 3; }
     .feed__step > img {
-      width: 54px;
+      max-width: 54px;
+      width: 100%;
       height: 50px; }
   .feed__arrow {
-    width: 282px;
+    max-width: 282px;
+    width: 100%;
     height: 24px;
-    margin: 0 38px; }
+    margin: 0 38px;
+    background: url("../../../assets/icons/feed/arrow.svg") top center no-repeat; }
   .feed__descr {
     display: flex;
     justify-content: center;
     margin-top: 16px;
     color: #c5e1e5; }
     .feed__descr > p {
-      width: 394px;
+      max-width: 394px;
+      width: 100%;
       text-align: center;
       font-size: 14px; }
     .feed__descr > p:nth-child(2) {
