--- a/pages/css/block/hero.css
+++ b/pages/css/block/hero.css
@@ -1,16 +1,19 @@
 .hero {
   position: relative;
   height: 795px;
-  z-index: -1; }
+  z-index: -1;
+  background: url("../../../assets/img/hero/hero-bg.png") center no-repeat; }
   .hero__bg {
     position: absolute;
     width: 100%;
+    max-width: 100%;
     z-index: -1; }
   .hero .container {
     display: flex;
-    padding: 48px 0px; }
+    padding: 48px 0px;
+    height: 100%; }
   .hero__offer {
-    width: 627px;
+    width: 43%;
     margin-top: 55px;
     margin-right: 50px;
     padding-left: 0px; }
@@ -18,49 +21,57 @@
     font-family: Rubik;
     font-style: normal;
     font-weight: 300;
-    font-size: 72px;
-    line-height: 81px;
+    font-size: 3.8vw;
+    line-height: 4.2vw;
     color: #f3f7f8; }
     .hero__header > span {
       font-weight: 500;
-      font-size: 64px; }
+      font-size: 2.8vw; }
   .hero__descr {
-    width: 463px;
+    max-width: 463px;
+    width: 100%;
     margin-top: 23px;
     font-family: Roboto;
     font-size: 14px;
     line-height: 20px;
     color: #f3f7f8; }
   .hero__container-img {
-    position: relative;
-    width: 804px;
-    clip-path: path("M723.969 172.95C791.87 262.733 819.491 359.131 795.323 445.606C771.155 532.081 695.198 608.632 599.676 643.6C504.154 678.096 388.492 670.535 270.528 636.04C152.564 601.544 32.2988 539.641 5.82885 456.474C-20.6411 373.78 46.6846 269.348 134.15 176.258C222.192 82.6946 330.948 0 439.705 0C547.887 0.472541 656.643 83.1672 723.969 172.95Z"); }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 54%;
+    height: 100%;
+    max-height: 660px;
+    -webkit-mask: url('../../../assets/img/hero/panda-form.svg') no-repeat;
+    mask: url('../../../assets/img/hero/panda-form.svg') no-repeat;
+    -webkit-mask-position: center;
+    mask-position: center;
+    overflow: hidden;
+    }
     .hero__container-img > img {
-      position: absolute;
-      left: 50%;
-      transform: translate(-57%, 0%);
-      width: 145%; }
+      width: 125%; }
   .hero__container-btn {
     position: absolute;
-    top: 87%;
-    left: 53.5%;
-    width: 98px;
-    height: 73px;
+    top: 50%;
+    right: 25%;
+    width: 5.5%;
+    height: 5%;
     transform: translate(-50%, -50%);
     cursor: pointer; }
     .hero__container-btn > img {
+      width: 100%;
       transition: 0.3s; }
       .hero__container-btn > img:hover {
         transform: scale(1.1); }
       .hero__container-btn > img:active {
         transform: scale(0.8); }
-  .hero__btn {
+  .hero__btn-menu > button {
     margin-top: 87px;
-    width: 258px;
+    width: 100%;
+    max-width: 258px;
     height: 52px;
     border-radius: 100px;
     border: none;
-    background: #FFFFFF;
     box-shadow: 0px 2px 50px rgba(185, 213, 217, 0.6);
     text-transform: uppercase;
     font-family: Roboto Mono;
@@ -71,7 +82,12 @@
     transition: 0.3s;
     outline: none;
     cursor: pointer; }
-    .hero__btn:hover {
+    .hero__btn-menu > button:hover {
       background: #C5E1E6;
       border-color: #C5E1E6;
       box-shadow: 0px 2px 50px #c5e1e6; }
+  .hero__btn-donate {
+    display: none;
+    background: #C5E1E6; }
+  .hero__btn-watch {
+    background: #ffffff; }
