--- a/pages/css/block/how.css
+++ b/pages/css/block/how.css
@@ -1,6 +1,8 @@
 .how {
   position: relative;
-  width: 100%; }
+  max-width: 100%;
+  width: 100%;
+  height: 865px; }
   .how .container {
     position: absolute;
     top: -65px;
@@ -9,6 +11,7 @@
   .how__list {
     display: flex;
     justify-content: space-between;
+    width: 100%;
     align-items: center;
     margin-top: 97px;
     padding: 0;
@@ -17,30 +20,40 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 145px;
+      max-width: 145px;
+      width: 100%;
       height: 145px;
       margin-bottom: 14px;
       border-radius: 100%;
       box-shadow: 0px 2px 50px rgba(0, 0, 0, 0.1); }
       .how__list-icon > img {
-        width: 54px;
+        max-width: 54px;
+        width: 100%;
         height: 50px; }
     .how__list-item {
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 394px;
+      max-width: 394px;
+      width: 100%;
       margin: 0 53px;
       text-align: center;
       font-size: 14px;
       line-height: 20px;
       color: #0d444d; }
   .how__img {
-    width: 100%; }
+    max-width: 100%;
+    width: 100%;
+    z-index: -1; }
   .how__bg {
     position: relative;
+    display: inline-block;
+    margin-top: 335px;
+    max-width: 100%;
     width: 100%;
-    margin-top: 336px; }
+    height: 523px;
+    background: url("../../../assets/img/how/how-works-image.png") top center no-repeat;
+    z-index: -1; }
   .how__tree {
     position: absolute; }
     .how__tree-01 {
