--- a/pages/css/block/look.css
+++ b/pages/css/block/look.css
@@ -6,11 +6,13 @@
     display: flex;
     justify-content: space-between; }
   .look__btn {
-    width: 52px; }
+    max-width: 52px;
+    width: 100%; }
   .look__list {
     display: flex;
     justify-content: space-between;
-    width: 1310px;
+    max-width: 88.5%;
+    width: 100%;
     padding: 0;
     list-style: none; }
   .look__item {
@@ -18,7 +20,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 81px;
+    max-width: 81px;
+    width: 100%;
     height: 131px;
     font-family: Roboto Mono;
     font-style: normal;
@@ -31,19 +34,20 @@
     .look__item-link {
       display: block;
       position: relative;
-      width: 80px;
+      max-width: 80px;
+      width: 100%;
       height: 76px;
       margin-bottom: 9px;
-      clip-path: path("M 73.0698 16.055 C 80.0173 25.4275 81.9472 38.2025 78.3447 48.0242 C 74.7421 57.8462 65.736 64.7794 55.3787 70.1715 C 45.0859 75.5639 33.4419 79.4801 23.535 76.0777 C 13.6281 72.7394 5.3937 62.2114 1.8555 49.7574 C -1.6183 37.3037 -0.3961 22.9239 7.0663 13.4871 C 14.593 3.9863 28.2955 -0.6358 41.2258 0.0703 C 54.0921 0.7765 66.122 6.7466 73.0698 16.055 Z"); 
-      cursor: pointer;}
+      clip-path: path("M 73.0698 16.055 C 80.0173 25.4275 81.9472 38.2025 78.3447 48.0242 C 74.7421 57.8462 65.736 64.7794 55.3787 70.1715 C 45.0859 75.5639 33.4419 79.4801 23.535 76.0777 C 13.6281 72.7394 5.3937 62.2114 1.8555 49.7574 C -1.6183 37.3037 -0.3961 22.9239 7.0663 13.4871 C 14.593 3.9863 28.2955 -0.6358 41.2258 0.0703 C 54.0921 0.7765 66.122 6.7466 73.0698 16.055 Z"); }
       .look__item-link:hover {
         animation: linear 10s infinite border-rotation; }
       .look__item-link > img {
         position: absolute;
-        width: 130%;
-        height: 110%;
-        top: -3px;
-        left: -16px; }
+        max-width: 150%;
+        width: 150%;
+        height: 120%;
+        top: -7px;
+        left: -21px; }
         .look__item-link > img:hover {
           animation: linear 10s infinite anti-border-rotation; }
   .look__slider {
@@ -69,3 +73,5 @@
         transform: scale(1.2); }
       .look__slider-next > img:active {
         transform: scale(0.8); }
+  .look__down {
+    display: none; }
