--- a/pages/css/block/map.css
+++ b/pages/css/block/map.css
@@ -6,28 +6,34 @@
 
 .map {
   position: relative;
+  max-width: 100%;
   width: 100%;
   height: 1040px;
   padding-top: 26px;
   background-color: #2a8086;
-  z-index: -1; }
+  z-index: -1;
+  overflow: hidden; }
   .map .container {
+    width: 75%;
     position: relative;
     height: 100%;
     background-color: #2a8086; }
     .map .container > img {
+      width: 100%;
       position: absolute;
       top: 54%;
-      left: 49.5%;
-      transform: translate(-50%, -50%); }
+      left: 0;
+      transform: translateY(-50%); }
   .map__pets {
     position: absolute;
-    width: 92px;
+    max-width: 92px;
+    width: 100%;
     transition: 0.3s; }
     .map__pets:hover > .map__pets-tooltip {
       display: flex; }
     .map__pets-wrapper {
-      width: 92px;
+      max-width: 92px;
+      width: 100%;
       height: 89px;
       clip-path: path("M 83.5084 18.3485 C 91.4484 29.06 93.654 43.66 89.5368 54.8848 C 85.4196 66.11 75.1268 74.0336 63.29 80.196 C 51.5268 86.3588 38.2194 90.8344 26.8972 86.946 C 15.5749 83.1308 6.1642 71.0988 2.1206 56.8656 C -1.8495 42.6328 -0.4526 26.1987 8.0758 15.4139 C 16.6778 4.5557 32.3377 -0.7267 47.1152 0.0804 C 61.8196 0.8874 75.568 7.7104 83.5084 18.3485 Z");
       background: #C5E1E6;
@@ -36,7 +42,6 @@
       overflow: hidden;
       transition: .7s; }
       .map__pets-wrapper:hover {
-        background: #0A5D69;
         animation: linear 10s infinite border-rotation; }
         .map__pets-wrapper:hover img {
           animation: linear 10s infinite anti-border-rotation; }
@@ -44,7 +49,8 @@
       position: absolute;
       left: 9px;
       top: 9px;
-      width: 73px;
+      max-width: 73px;
+      width: 100%;
       height: 71px;
       clip-path: path("M 66.8067 14.6788 C 73.1587 23.248 74.9232 34.928 71.6294 43.9078 C 68.3357 52.888 60.1014 59.2269 50.632 64.1568 C 41.2214 69.087 30.5755 72.6675 21.5178 69.5568 C 12.4599 66.5046 4.9314 56.879 1.6965 45.4925 C -1.4796 34.1062 -0.3621 20.959 6.4606 12.3311 C 13.3422 3.6446 25.8702 -0.5814 37.6922 0.0643 C 49.4557 0.7099 60.4544 6.1683 66.8067 14.6788 Z");
       background-color: blue;
@@ -55,6 +61,7 @@
         position: absolute;
         top: -32.5%;
         left: -72%;
+        max-width: 240%;
         width: 240%; }
     .map__pets-tooltip {
       position: absolute;
@@ -81,7 +88,8 @@
         position: absolute;
         bottom: -29px;
         left: 50%;
-        width: 32px;
+        max-width: 32px;
+        width: 100%;
         height: 30px;
         transform: translate(-50%, 0);
         clip-path: polygon(0 0, 50% 59%, 100% 0);
@@ -92,7 +100,8 @@
         position: absolute;
         bottom: -40px;
         left: 50%;
-        width: 42px;
+        max-width: 42px;
+        width: 100%;
         height: 40px;
         transform: translate(-50%, 0);
         clip-path: polygon(0 0, 50% 59%, 100% 0);
@@ -122,7 +131,8 @@
     bottom: 2.5%;
     display: flex;
     justify-content: space-between;
-    width: 80px; }
+    max-width: 80px;
+    width: 100%; }
     .map__btn > div {
       width: 32.52px;
       height: 32.52px;
@@ -141,7 +151,8 @@
         top: 49%;
         left: 48%;
         transform: translate(-50%, -50%);
-        width: 20px;
+        max-width: 20px;
+        width: 100%;
         height: 2px;
         border-radius: 2px;
         background: #ffffff; }
@@ -151,7 +162,8 @@
         top: 49%;
         left: 48%;
         transform: translate(-50%, -50%) rotate(90deg);
-        width: 20px;
+        max-width: 20px;
+        width: 100%;
         height: 2px;
         border-radius: 2px;
         background: #ffffff; }
@@ -167,10 +179,9 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 20px;
+        max-width: 20px;
+        width: 100%;
         height: 2px;
         border-radius: 2px;
         background: #ffffff; }
 
-.footer {
-  margin-top: 0; }
