--- a/pages/css/block/testimonials.css
+++ b/pages/css/block/testimonials.css
@@ -1,7 +1,8 @@
 .testimonials {
   margin-top: 75px; }
   .testimonials .container__btn {
-    width: 255px;
+    max-width: 255px;
+    width: 100%;
     letter-spacing: 0.1em;
     padding: 10px; }
     .testimonials .container__btn > img {
@@ -11,15 +12,15 @@
   .testimonials__massages {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    margin-top: 51px;
+    max-width: 100%;
     z-index: -1; }
   .testimonials__feedback {
-    width: 480px;
+    max-width: 32.4%;
+    margin-top: 51px;
     height: 260px; }
   .testimonials__descr {
     position: relative;
-    width: 100%;
+    max-width: 100%;
     height: 174px;
     padding: 28px 45px;
     border-radius: 10px;
@@ -30,7 +31,8 @@
       position: absolute;
       bottom: -30px;
       left: 86px;
-      width: 32px;
+      max-width: 32px;
+      width: 100%;
       height: 30px;
       transform: translate(-50%, 0);
       clip-path: polygon(0 0, 50% 59%, 100% 0);
@@ -41,7 +43,8 @@
       position: absolute;
       bottom: -40px;
       left: 86px;
-      width: 42px;
+      max-width: 42px;
+      width: 100%;
       height: 40px;
       transform: translate(-50%, 0);
       clip-path: polygon(0 0, 50% 59%, 100% 0);
@@ -67,12 +70,12 @@
     margin-top: 18px;
     height: 68px; }
     .testimonials__person-photo {
-      width: 68px;
+      max-width: 68px;
       height: 68px;
       margin-left: 19px;
       margin-right: 16px; }
       .testimonials__person-photo > img {
-        width: 100%; }
+        max-width: 100%; }
     .testimonials__person-name {
       font-family: Roboto;
       font-style: italic;
