--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -1,18 +1,18 @@
 * {
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   position: relative;
+  margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
-  z-index: 0;
-}
+  background-color: #f5f9fa;
+  z-index: 0; }
 
 .container {
-  width: 1480px;
-  margin: 0 auto; }
+  width: 77.8%;
+  margin: 0 auto;
+  margin-top: 0px; }
   .container__header {
     display: flex;
     justify-content: space-between;
@@ -22,7 +22,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 331px;
+    max-width: 331px;
     height: 52px;
     border: 1.5px solid #19707d;
     border-radius: 100px;
@@ -42,6 +42,31 @@ body {
       border-color: #C5E1E6;
       box-shadow: 0px 2px 50px #c5e1e6; }
 
+.btn-320px {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  max-width: 331px;
+  height: 52px;
+  border: 1.5px solid #19707d;
+  border-radius: 100px;
+  padding: 20px 14px;
+  text-decoration: none;
+  font-family: roboto mono;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #19707d;
+  transition: 0.5s;
+  margin: 0 auto; }
+  .btn-320px:hover {
+    background: #C5E1E6;
+    border-color: #C5E1E6;
+    box-shadow: 0px 2px 50px #c5e1e6; }
+
 .subheader {
   font-family: Rubik;
   font-style: normal;
@@ -51,4 +76,3 @@ body {
   font-weight: 400;
   text-transform: uppercase;
   color: #0d444d; }
-/*# sourceMappingURL=style.css.map */
