--- a/pages/css/block/media-footer-map.css
+++ b/pages/css/block/media-footer-map.css
@@ -1,3 +1,11 @@
+@media (max-width: 2000px) {
+  .footer {
+
+    margin-top: 0px;
+
+  }
+}
+
 @media (max-width: 1200px) {
   .footer {
     max-width: 1200px;
@@ -42,7 +50,7 @@
 
 @media (max-width: 639px) {
   .footer {
-    margin-top: 0px; }
+    margin-top: 0;}
     .footer__logo {
       width: 70px;
       height: 70px; }
